explore ph tours

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
     </head>
     <body>
         <h1>Hi! I am Thomas</h1>
+        <h2>HTML Tasks</h2>
+        <ol>
+            <li>
+                <a href="JimenezExplorePHTours.html">Explore PH Tours</a>
+            </li>
+        </ol>
     </body>
 </html>
