home button in nav bar now goes to page top

--- a/JimenezExplorePHTours.html
+++ b/JimenezExplorePHTours.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-        <header>
+        <header id="home">
             <img src="landscape-placeholder-svgrepo-com.svg" height="100" width="100">
             <h1>Explore PH Tours</h1>
             <h3>Your Gateway to the Philippines!</h3>
@@ -16,7 +16,7 @@
 
         <img src="Hero-Banner-Placeholder-Dark-1024x480.png">
 
-        <main id="home">
+        <main>
             <section>
                 <h2>Book Your Next Adventure Today!</h2>
                 <p>Explore the Philippines like never before with our exciting packages. Limited slots available for promo deals. Don't miss out!</p>
