--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <li>
                 <a href="JimenezExplorePHTours.html">Explore PH Tours</a>
             </li>
+            <li>
+                <a href="JimenezCourseSchedule.html">2nd Term Course Schedule</a>
+            </li>
         </ol>
     </body>
 </html>
