--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
                             <p>Here's an image of me on the moon. I remember being so excited! This was 50 years ago, but I still think about it today. Breathing was pretty difficult but walking was quite fun.</p>
                         </div>
                     </div>
+                    <div class="item">
+                        <img src="bytebistro.png">
+                        <div class="itemtext">
+                            <a href="https://github.com/mGo08/BYTEBISTRO">ByteBistro</a>
+                            <p>A web application for restaurant managers. Allows for staff, menu, and inventory management.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
